Finished Zookeeper with Python

--- a/Hyperskill Academy/Introduction to python/Zookeeper with Python/Rush into print/task-info.yaml
+++ b/Hyperskill Academy/Introduction to python/Zookeeper with Python/Rush into print/task-info.yaml
@@ -13,9 +13,9 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/98/stages/539/implement#comment
+feedback_link: https://hyperskill.org/learn/step/8815#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: "Wed, 28 Aug 2024 16:40:18 UTC"
-record: -1
+record: 1
