--- a/Hyperskill Academy/Introduction to python/Zookeeper with Python/Show me an animal/task-info.yaml
+++ b/Hyperskill Academy/Introduction to python/Zookeeper with Python/Show me an animal/task-info.yaml
@@ -13,6 +13,9 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/98/stages/540/implement#comment
-status: Unchecked
-record: -1
+feedback_link: https://hyperskill.org/learn/step/8816#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 28 Aug 2024 16:48:18 UTC"
+record: 2
