--- a/Hyperskill Academy/Introduction to python/Zookeeper with Python/Sustainable care  3/task-info.yaml
+++ b/Hyperskill Academy/Introduction to python/Zookeeper with Python/Sustainable care  3/task-info.yaml
@@ -13,6 +13,10 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/projects/98/stages/542/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/8818#comment
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Thu, 29 Aug 2024 16:27:56 UTC"
 record: -1
