--- a/Hyperskill Academy/Introduction to python/course-info.yaml
+++ b/Hyperskill Academy/Introduction to python/course-info.yaml
@@ -1,13 +1,9 @@
 type: hyperskill
-title: Zookeeper with Python
+title: Simple Chat Bot with Python
 language: English
-summary: "<p>Learn the very basics of Python coding by building a simple tool for\
-  \ zookeepers. Get to know how to work with variables and lists, put them in while\
-  \ loops and develop a simple console app from scratch.</p><br/><br/>Learn more at\
-  \ <a href=\"https://hyperskill.org/projects/98?utm_source=ide&utm_medium=ide&utm_campaign=ide&utm_content=project-card\"\
-  >https://hyperskill.org/projects/98</a>"
+summary: <p>Create a simple console chat bot from scratch that will communicate with
+  you and perform basic arithmetic operations.</p><br/><br/>Learn more at <a href="https://hyperskill.org/projects/97?utm_source=ide&utm_medium=ide&utm_campaign=ide&utm_content=project-card">https://hyperskill.org/projects/97</a>
 programming_language: Python
-environment: unittest
 content:
-  - Zookeeper with Python
+  - Simple Chat Bot with Python
 mode: Study
