--- a/Hyperskill Academy/Introduction to python/course-remote-info.yaml
+++ b/Hyperskill Academy/Introduction to python/course-remote-info.yaml
@@ -1,22 +1,24 @@
 hyperskill_project:
-  id: 98
-  ide_files: https://cogniterra.org/media/attachments/lesson/24742/additional_files.json
+  id: 97
+  ide_files: https://cogniterra.org/media/attachments/lesson/24741/additional_files.json
   is_template_based: true
   use_ide: true
-  environment: unittest
-update_date: "Thu, 29 Aug 2024 15:33:33 UTC"
+update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
 stages:
-  - id: 539
-    step: 8815
+  - id: 534
+    step: 8799
     is_completed: true
-  - id: 540
-    step: 8816
+  - id: 535
+    step: 8800
     is_completed: true
-  - id: 541
-    step: 8817
+  - id: 536
+    step: 8801
     is_completed: true
-  - id: 542
-    step: 8818
+  - id: 537
+    step: 8802
+    is_completed: true
+  - id: 538
+    step: 8803
     is_completed: true
 topics:
   0:
@@ -25,30 +27,22 @@ topics:
     - title: Multi-line programs
       theory_id: 47555
   1:
-    - title: Basic data types
-      theory_id: 47516
-    - title: Quotes and multi-line strings
-      theory_id: 5814
-  2:
     - title: "PEP 8: Coding style guide"
       theory_id: 47499
     - title: Taking user's input
       theory_id: 47680
+    - title: Basic data types
+      theory_id: 47516
     - title: Variables
       theory_id: 47536
     - title: "Integer arithmetic: basic operations"
       theory_id: 47564
     - title: "Integer arithmetic: special operations"
       theory_id: 47917
-    - title: Invoking functions
-      theory_id: 5891
-    - title: List
-      theory_id: 5979
-    - title: Indexes
-      theory_id: 6189
-  3:
+  2:
     - title: Program with numbers
       theory_id: 47734
+  3:
     - title: If statement
       theory_id: 5953
     - title: While loop
@@ -57,3 +51,14 @@ topics:
       theory_id: 6025
     - title: Comparisons
       theory_id: 5920
+  4:
+    - title: Else statement
+      theory_id: 5932
+    - title: Invoking functions
+      theory_id: 5891
+    - title: List
+      theory_id: 5979
+    - title: Indexes
+      theory_id: 6189
+    - title: Declaring functions
+      theory_id: 5900
