--- a/Hyperskill Academy/Introduction to python/course-info.yaml
+++ b/Hyperskill Academy/Introduction to python/course-info.yaml
@@ -1,9 +1,13 @@
 type: hyperskill
-title: Simple Chat Bot with Python
+title: Loan Calculator
 language: English
-summary: <p>Create a simple console chat bot from scratch that will communicate with
-  you and perform basic arithmetic operations.</p><br/><br/>Learn more at <a href="https://hyperskill.org/projects/97?utm_source=ide&utm_medium=ide&utm_campaign=ide&utm_content=project-card">https://hyperskill.org/projects/97</a>
+summary: "<p>Personal finances are an important part of life. Sometimes you need some\
+  \ extra money and decide to take a loan, or you want to buy a house using a mortgage.\
+  \ To make an informed decision, you need to be able to calculate different financial\
+  \ parameters. Let’s make a program that can help us with that!</p><br/><br/>Learn\
+  \ more at <a href=\"https://hyperskill.org/projects/90?utm_source=ide&utm_medium=ide&utm_campaign=ide&utm_content=project-card\"\
+  >https://hyperskill.org/projects/90</a>"
 programming_language: Python
 content:
-  - Simple Chat Bot with Python
+  - Loan Calculator
 mode: Study
