--- a/Hyperskill Academy/Introduction to python/course-remote-info.yaml
+++ b/Hyperskill Academy/Introduction to python/course-remote-info.yaml
@@ -1,24 +1,21 @@
 hyperskill_project:
-  id: 97
-  ide_files: https://cogniterra.org/media/attachments/lesson/24741/additional_files.json
-  is_template_based: true
+  id: 90
+  ide_files: https://cogniterra.org/media/attachments/lesson/24581/additional_files.json
+  is_template_based: false
   use_ide: true
-update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
+update_date: "Mon, 02 Sep 2024 15:59:57 UTC"
 stages:
-  - id: 534
-    step: 8799
+  - id: 500
+    step: 8002
     is_completed: true
-  - id: 535
-    step: 8800
+  - id: 501
+    step: 8003
     is_completed: true
-  - id: 536
-    step: 8801
+  - id: 502
+    step: 8004
     is_completed: true
-  - id: 537
-    step: 8802
-    is_completed: true
-  - id: 538
-    step: 8803
+  - id: 503
+    step: 8005
     is_completed: true
 topics:
   0:
@@ -26,39 +23,66 @@ topics:
       theory_id: 47352
     - title: Multi-line programs
       theory_id: 47555
+    - title: Basic data types
+      theory_id: 47516
+    - title: Variables
+      theory_id: 47536
   1:
     - title: "PEP 8: Coding style guide"
       theory_id: 47499
     - title: Taking user's input
       theory_id: 47680
-    - title: Basic data types
-      theory_id: 47516
-    - title: Variables
-      theory_id: 47536
+    - title: Program with numbers
+      theory_id: 47734
+    - title: If statement
+      theory_id: 5953
+    - title: Else statement
+      theory_id: 5932
+    - title: Importing modules
+      theory_id: 6019
+    - title: Elif statement
+      theory_id: 5926
+    - title: Math functions
+      theory_id: 6256
     - title: "Integer arithmetic: basic operations"
       theory_id: 47564
     - title: "Integer arithmetic: special operations"
       theory_id: 47917
-  2:
-    - title: Program with numbers
-      theory_id: 47734
-  3:
-    - title: If statement
-      theory_id: 5953
-    - title: While loop
-      theory_id: 5940
+    - title: Invoking functions
+      theory_id: 5891
     - title: Boolean type and operations. True and false
       theory_id: 6025
     - title: Comparisons
       theory_id: 5920
-  4:
-    - title: Else statement
-      theory_id: 5932
-    - title: Invoking functions
-      theory_id: 5891
+    - title: Quotes and multi-line strings
+      theory_id: 5814
+  2:
+    - title: PyCharm basics
+      theory_id: 6193
+    - title: Running Python applications in PyCharm
+      theory_id: 19153
+    - title: Command line arguments
+      theory_id: 7981
+    - title: Argparse module
+      theory_id: 11389
     - title: List
       theory_id: 5979
     - title: Indexes
       theory_id: 6189
+    - title: String formatting
+      theory_id: 6037
+    - title: Type casting
+      theory_id: 6224
+  3:
+    - title: For loop
+      theory_id: 6065
+    - title: While loop
+      theory_id: 5940
+    - title: Debugging Python applications in PyCharm
+      theory_id: 19163
+    - title: Program execution
+      theory_id: 6047
+    - title: Errors
+      theory_id: 6052
     - title: Declaring functions
       theory_id: 5900
