--- a/Hyperskill Academy/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
+++ b/Hyperskill Academy/Bill Splitter/Bill Splitter/Party is over/task-info.yaml
@@ -1,6 +1,6 @@
 type: edu
 files:
-  - name: calculator.py
+  - name: billsplitter.py
     visible: true
     learner_created: false
   - name: test/__init__.py
@@ -12,10 +12,10 @@ files:
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/learn/step/28248#comment
+feedback_link: https://hyperskill.org/learn/step/12901#comment
 status: Solved
 feedback:
   message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
     to continue learning.
-  time: "Thu, 29 Aug 2024 16:45:38 UTC"
-record: -1
+  time: "Sun, 08 Sep 2024 10:32:42 UTC"
+record: 4
