--- a/Hyperskill Academy/Bill Splitter/Bill Splitter/The bill has arrived/task-info.yaml
+++ b/Hyperskill Academy/Bill Splitter/Bill Splitter/The bill has arrived/task-info.yaml
@@ -1,20 +1,20 @@
 type: edu
 files:
+  - name: billsplitter.py
+    visible: true
+    learner_created: false
   - name: test/__init__.py
     visible: false
     learner_created: false
   - name: test/tests.py
     visible: false
     learner_created: false
-  - name: calculator.py
-    visible: true
-    learner_created: false
   - name: tests.py
     visible: false
     learner_created: false
-feedback_link: https://hyperskill.org/learn/step/28246#comment
+feedback_link: https://hyperskill.org/learn/step/12899#comment
 status: Solved
 feedback:
   message: Congratulations!
-  time: "Thu, 29 Aug 2024 16:34:10 UTC"
-record: 1
+  time: "Fri, 06 Sep 2024 17:26:39 UTC"
+record: 2
